--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,9 +62,9 @@ a:hover {
   padding-left: 100px !important;
   padding-right: 100px !important;
 }
-.pd-100 {
-  padding-left: 75px !important;
-  padding-right: 75px !important;
+.pd-160 {
+  padding-left: 160px !important;
+  padding-right: 160px !important;
 }
 .navbar-brand img {
   max-height: 70px;
@@ -744,7 +744,9 @@ a:hover {
   .ready-take-online h2 {
     font-size: 22px !important;
   }
-
+  .ready-take-online {
+    margin-top: 20px !important;
+  }
   .ready-take-online p {
     font-size: 11px !important;
   }
@@ -1228,13 +1230,14 @@ border-radius: 50%;
 }
 
 .first-img {
-  left: -215px;
+  left: -220px;
   z-index: 0 !important;
+  top: 90%;
 }
 
 .second-img {
   left: 95px;
-  top: 50%;
+  top: 70%;
   z-index: 0 !important;
 }
 
@@ -1249,7 +1252,7 @@ border-radius: 50%;
 .fourth-img {
   position: relative;
   bottom: 90%;
-  transform: translate(20%, 40%);
+  transform: translate(20%, 60%);
   left: 100px;
   z-index: 0 !important;
 }
@@ -1259,7 +1262,7 @@ border-radius: 50%;
   transform: translateY(50%);
   left: 70px;
   z-index: 0 !important;
-  margin-bottom: 70px;
+  margin-bottom: 60px;
 }
 .main-image {
   position: relative;
@@ -1273,6 +1276,9 @@ border-radius: 50%;
 .one-app-payments {
   margin-top: 5%;
 }
+.pl-130 {
+  padding-left: 130px;
+}
 @media (max-width: 576px) {
   .main-image {
     display: flex;
@@ -1284,6 +1290,7 @@ border-radius: 50%;
     margin: 0 auto;
     width: 100%;
     max-width: 400px;
+    padding-left: 25px;
   }
 }
 /* ready-talk-online */
@@ -1418,8 +1425,12 @@ hr {
   }
 }
 @media (max-width: 600px) {
-  .pd-100 {
+  .pd-160 {
     padding: 0 20px !important;
+  }
+  .pl-130 {
+    padding: 0 20px !important;
+    margin-bottom: 35px;
   }
 }
 
@@ -1826,6 +1837,7 @@ hr {
 
   .payment-for-gov {
     order: 1;
+    padding-left: 20px !important;
   }
   .gov-img {
     height: auto;
