--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1432,6 +1432,9 @@ hr {
     padding: 0 20px !important;
     margin-bottom: 35px;
   }
+  .p-140 {
+    padding: 0 20px !important;
+  }
 }
 
 .splashoverlay {
@@ -1979,5 +1982,231 @@ hr {
     left: calc(100% - 320px);
     padding: 50px;
     transform: rotate(-1deg);
+  }
+}
+
+/* About page */
+
+.left-titles {
+  margin-top: 23%;
+}
+.our-story-text,
+.our-values-text,
+.our-mission-text {
+  font-size: 20px;
+  font-weight: 500;
+  color: #000000;
+  line-height: 1.4;
+}
+.custom-paragraph {
+  font-size: 16px;
+}
+.our-story-title {
+  font-size: 48px;
+  font-weight: 800;
+  color: #00816d;
+  margin-bottom: 35px;
+}
+
+.our-story-content {
+  margin-top: 15%;
+  line-height: 2.1;
+}
+.our-story-content p {
+  font-weight: 500;
+  font-size: 17.5px;
+  color: #5d6160;
+}
+.green-text {
+  color: #00816d;
+  font-weight: 700;
+  font-size: 18px;
+}
+.p-140 {
+  padding-left: 140px;
+  padding-right: 140px;
+}
+.ourstory-img img {
+  height: 540px;
+  width: 100%;
+  margin-top: 6%;
+  border-radius: 60px;
+  object-fit: cover;
+}
+.about-marketing-left img {
+  display: flex;
+  justify-content: end;
+  width: 60px;
+  height: 50px;
+}
+.about-rightimg {
+  margin-top: 8%;
+}
+.about-marketing-left {
+  margin-top: 16%;
+}
+.about-rightimg img {
+  border-radius: 60px;
+  width: 100%;
+  height: 474px;
+}
+.catalyst-text {
+  font-size: 27px;
+  font-weight: 600;
+  margin-bottom: 12px;
+  line-height: 1.2;
+}
+.about-marketing-text {
+  margin-left: 65px;
+  margin-top: 12px;
+}
+.right-shape-img img {
+  float: right;
+  margin-right: 10vh;
+}
+.our-values h2,
+.our-mission h2 {
+  font-size: 24px;
+  font-weight: 600;
+  color: #00816d;
+  letter-spacing: 2px;
+  margin-bottom: 20px;
+}
+.our-values p,
+.our-mission p {
+  font-size: 17px;
+  font-weight: 500;
+  color: #5d6160;
+  line-height: 2;
+}
+.our-values {
+  margin-top: 7%;
+}
+.our-mission {
+  margin-top: 7%;
+}
+.whatwedo-img img {
+  height: 550px;
+  width: 600px;
+  border-radius: 60px;
+  object-fit: cover;
+  margin-top: 20%;
+}
+.whatwedo-img-text .what-wedo-text {
+  font-size: 45px;
+  font-weight: 800;
+  line-height: 1.4;
+}
+.whatwedo-img-text .what-wedo-text span {
+  color: #00816d;
+}
+.whatwedo-img-text .whatwedo-paragraph {
+  font-size: 17px;
+  font-weight: 500;
+  color: #5d6160;
+  line-height: 1.6;
+}
+.whatwedo-img-text {
+  margin-top: 21%;
+  padding-left: 25px;
+}
+
+.whatweare-img img {
+  height: 550px;
+  width: 600px;
+  border-radius: 60px;
+  object-fit: cover;
+  margin-top: 20%;
+}
+.whatweare-img-text .what-weare-text {
+  font-size: 45px;
+  font-weight: 800;
+  line-height: 1.4;
+  margin-bottom: 20px;
+}
+.whatweare-img-text .what-weare-text span {
+  color: #00816d;
+}
+.whatweare-img-text .whatweare-paragraph {
+  font-size: 17px;
+  font-weight: 500;
+  color: #5d6160;
+  line-height: 1.6;
+}
+.whatweare-img-text {
+  margin-top: 17%;
+  padding-right: 25px;
+}
+@media screen and (max-width: 767px) {
+  .left-titles {
+    margin-top: 35%;
+  }
+
+  .our-story-text,
+  .our-values-text,
+  .our-mission-text {
+    font-size: 18px;
+  }
+
+  .our-story-title {
+    font-size: 28px;
+    padding-top: 0 5px !important;
+  }
+
+  .our-story-content p {
+    font-size: 15px;
+  }
+  .our-story-content p br,
+  .catalyst-text br,
+  .our-values p br,
+  .our-mission p br {
+    display: none;
+  }
+
+  .ourstory-img img {
+    height: auto;
+    width: 100%;
+  }
+  .about-marketing-left img {
+    width: 45px;
+    height: 35px;
+  }
+  .about-marketing-text {
+    margin-right: 50px;
+    margin-left: 48px;
+  }
+  .about-marketing-text p {
+    font-size: 15px;
+  }
+  .about-rightimg {
+    margin-top: 8%;
+  }
+  .about-marketing-left {
+    margin-top: 16%;
+  }
+  .catalyst-text {
+    font-size: 17px;
+  }
+
+  .about-rightimg img {
+    height: auto;
+  }
+  .our-values h2 {
+    margin-top: 15px;
+  }
+  .whatwedo-img img,
+  .whatweare-img img {
+    height: auto;
+  }
+  .whatwedo-img {
+    order: 2;
+  }
+  .whatwedo-img-text {
+    order: 1;
+  }
+  .right-shape-img img {
+    float: right;
+    margin-right: -30px !important;
+    margin-top: 5px;
   }
 }
