--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2257,7 +2257,11 @@ hr {
   font-size: 14px;
   color: #5d6160;
 }
-
+.news-menu {
+  color: #003830;
+  font-size: 20px;
+  font-weight: 400;
+}
 .box-news h2 {
   font-size: 18px;
   font-weight: 600;
@@ -2334,17 +2338,24 @@ hr {
 
 .news-menu li a {
   text-decoration: none;
-  color: #000000;
+  color: #003830;
   padding: 5px 10px;
   border-radius: 5px;
+  font-size: 16px;
+  font-weight: 500;
+}
+.news-menu li.selected a {
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 17px;
 }
 .news-menu li.selected {
   background-color: #00816d;
   padding: 14px 38px;
-  font-size: 16px;
+  font-size: 17px;
   border-radius: 40px;
   font-weight: 600;
-  color: #ffffff;
+  color: #ffffff !important;
 }
 
 .news-menu li {
@@ -2464,23 +2475,23 @@ hr {
 }
 
 .page-link .fa-arrow-left {
-  color: #5d6160;
   width: 11.67px;
   height: 11.67px;
   margin-right: 7px;
 }
 .page-link .pagination-word-right {
-  color: #171d1c;
+  font-size: 15px;
+  font-weight: 700;
+}
+.page-link .pagination-word-left {
   font-size: 15px;
   font-weight: 700;
 }
 .pagination-word-left .left {
-  color: #5d6160;
   font-size: 14px;
   font-weight: 500;
 }
 .page-link .fa-arrow-right {
-  color: #171d1c;
   margin-left: 7px;
   width: 11.67px;
   height: 11.67px;
@@ -2490,9 +2501,10 @@ hr {
   margin: 0 5px;
 }
 
-.pagination .page-link {
-  padding: 7px 17px;
+.pagination .number {
+  padding: 10px 17px !important;
   border-radius: 50%;
+  color: #5d6160;
 }
 .pagination .page-link :focus {
   border-color: inherit;
@@ -2505,9 +2517,23 @@ hr {
   border: none;
 }
 
-.page-item.active .page-link {
+.page-item.active .number {
   background-color: #00816d !important;
   color: #ffffff !important;
+  border-radius: 50%;
+  padding: 10px;
+}
+.page-item.active .pagination-word-right {
+  color: #000000 !important;
+}
+.page-item.active .pagination-word-left {
+  color: #000000 !important;
+}
+.page-item.active .fa-arrow-right {
+  color: #000000 !important;
+}
+.page-item.active .fa-arrow-left {
+  color: #000000 !important;
 }
 
 .full-width-media-news {
