--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2578,9 +2578,7 @@ hr {
 
 @media (max-width: 767px) {
   .news-menu li {
-    width: 100%;
-    text-align: right;
-    padding: 20px;
+    margin-bottom: 10px;
   }
   .article-img {
     height: auto;
@@ -2599,8 +2597,12 @@ hr {
     padding: 6px 10px;
     font-size: 18px;
   }
-  .media-news h2 {
-    font-size: 10px;
+
+  .page-link .pagination-word-right,
+  .pagination-word-left,
+  .fa-arrow-right,
+  .fa-arrow-left {
+    display: none;
   }
 }
 
