--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2857,6 +2857,12 @@ hr {
   }
 }
 @media (max-width: 768px) {
+  .author-details-article h5 {
+    line-height: 1;
+  }
+  .author-details-article p {
+    margin-top: 2px;
+  }
   .podcast-innerpage {
     flex-direction: column;
     align-items: center;
